--- a/MobileMiner/app/src/main/res/layout/activity_main.xml
+++ b/MobileMiner/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,13 @@
 
     <Button
         android:id="@+id/miner_button"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/status_text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:text="开始挖矿"
         android:textColor="#000000"
         android:textSize="18sp" />
