--- a/MobileMiner/app/src/main/res/layout/coin_item.xml
+++ b/MobileMiner/app/src/main/res/layout/coin_item.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:minHeight="50dp"
     android:gravity="center"
     android:textColor="#000000"
-    android:textSize="20sp"/>
+    android:textSize="18sp"/>
