--- a/MobileMiner/app/src/main/res/layout/activity_main.xml
+++ b/MobileMiner/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,17 @@
 
     <TextView
         android:id="@+id/status_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/coins_spinner"
         android:layout_centerHorizontal="true"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:gravity="center"
         android:layout_marginTop="40dp"
         android:text="prepare"
         android:textColor="#ffffff"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold" />
 
     <Button
